--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,10 @@
 html {
     background-color: rgb(20, 23, 20);
 }
+a, th, td, h1,h3,h4,h5,h6 {
+    font-family: "Poppins";
+}
+
 .navbar {
     font-family: "Poppins";
     font-weight: 500;
@@ -70,9 +74,15 @@ background-size: cover;
 .login_submit * {
     width: 100px;
 }
-/* register Page */
-
-
+/* admin Page */
+.test {
+    background-color: rgb(20, 23, 20);
+    color: white;
+}
+h3{
+    display:flex;
+    place-content: center;
+}
 
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
