--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ html {
 a, th, td, h1,h3,h4,h5,h6 {
     font-family: "Poppins";
 }
-
+/* navbar */
 .navbar {
     font-family: "Poppins";
     font-weight: 500;
@@ -19,12 +19,38 @@ a, th, td, h1,h3,h4,h5,h6 {
     color: rgb(111, 225, 111);
 }
 
+.indexer {
+    display: flex;
+}
+.collapse {
+    display: flex;
+    flex-basis: max-content;
+    place-content: space-between;
+}
+/* footer */
 .footer {
     font-family: "Poppins";
     font-weight: 500;
     background: rgb(27, 53, 27);
+    color: white;
     display: flex;
     gap: 10px;
+    flex-direction: column;
+}
+
+.social {
+    display: flex;
+    place-content: center;
+    gap: 20px;
+    font-size: 50px;
+}
+
+.social a {
+    color: white;
+}
+
+.copyright {
+    display: flex;
     place-content: center;
 }
 /* Login Page */
@@ -75,15 +101,23 @@ background-size: cover;
     width: 100px;
 }
 /* admin Page */
-.test {
-    background-color: rgb(20, 23, 20);
+.admin_page {
+    background-color: rgb(108, 126, 108);
     color: white;
+}
+.admin_page h3 {
+    padding-top: 100px;
 }
 h3{
     display:flex;
     place-content: center;
 }
-
+.aksi {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* sound */
