--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ h3{
     flex-basis: max-content;
     place-content: space-between;
 }
+
 /* footer */
 .footer {
     font-family: "Poppins";
@@ -57,6 +58,8 @@ h3{
     display: flex;
     place-content: center;
 }
+/* audio */
+
 /* Login Page */
 .login_page {
 width: fit-content;
@@ -129,5 +132,3 @@ background-size: cover;
 }
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-/* sound */
