fix berita sedang berusah mengindex longtext

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,29 @@
+/* spinner */
+#preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #fff; /* Warna latar belakang */
+    z-index: 9999; /* Pastikan preloader berada di atas semua konten lain */
+}
+
+.spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    background-color: #333; /* Warna spinner */
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: translate(-50%, -50%) rotate(0deg); }
+    100% { transform: translate(-50%, -50%) rotate(360deg); }
+}
 /* default style */
  * {
     font-family: "Poppins", sans-serif;
