--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,32 +1,3 @@
-/* spinner */
-#preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #fff; /* Warna latar belakang */
-    z-index: 9999; /* Pastikan preloader berada di atas semua konten lain */
-}
-
-
-
-.spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 50px;
-    height: 50px;
-    background-color: #333; /* Warna spinner */
-    border-radius: 50%;
-    animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-    0% { transform: translate(-50%, -50%) rotate(0deg); }
-    100% { transform: translate(-50%, -50%) rotate(360deg); }
-}
-
 body {
     min-height: 100vh;
 }
@@ -42,6 +13,9 @@ body {
 /* Navbar */
 .navbar a {
     color: white;
+    font-size: 26px;
+    text-decoration: none;
+    font-weight: 300;
 }
 
 .musikco:hover {
@@ -51,6 +25,11 @@ body {
 .search_bar {
     display: flex;
     gap: 10px;
+}
+/* index */
+.content {
+    display: flex;
+    flex-wrap: wrap;
 }
 /* admin */
  h1 {
@@ -62,7 +41,7 @@ a.l-konten {
     margin: auto;
     display: flex;
     place-content: center;
-    font-size: larger;
+    font-size: medium;
 }
 .option {
     width: max-content;
