--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ tr td img {
     place-content: center;
     flex-direction: column;
     gap: 0;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .form div input {
@@ -90,7 +90,8 @@ tr td img {
     border-radius: 10px;
     padding: 5%;
     margin: 10%;
-    height: 100vh;
+    min-height: fit-content;
+    max-height: 200vh;
 }
 
 .form_place a{
